--- a/docroot/themes/custom/big_noise/scss/config/_variables.scss
+++ b/docroot/themes/custom/big_noise/scss/config/_variables.scss
@@ -170,6 +170,13 @@ $bn-page-title-ribbon-height-layout-desktop: 28.8rem;
 
 
 
+// Secondary Navigation (Site Main)
+
+$bn-site-main-secondary-navigation-height-layout-mobile: 4rem;
+$bn-site-main-secondary-navigation-height-layout-tablet: 4.8rem;
+$bn-site-main-secondary-navigation-height-layout-desktop: 6.7rem;
+
+
 // Footer
 
 $bn-footer-height-layout-mobile: 35.5rem;
