--- a/docroot/themes/custom/big_noise/scss/layout/_site--main--main-content.scss
+++ b/docroot/themes/custom/big_noise/scss/layout/_site--main--main-content.scss
@@ -1,19 +1,3 @@
-.site--main--main-content-container {
-  min-height: 100vh;
-
-  padding-top: $bn-header-height-layout-mobile;
-  padding-bottom: $bn-footer-height-layout-mobile;
-  @media (min-width: $bn-breakpoint-layout-tablet) {
-    padding-top: $bn-header-height-layout-tablet;
-    padding-bottom: $bn-footer-height-layout-tablet;
-  }
-  @media (min-width: $bn-breakpoint-layout-desktop) {
-    padding-top: $bn-header-height-layout-desktop;
-    padding-bottom: $bn-footer-height-layout-desktop;
-  }
-}
-
-
 .site--main--main-content {
   padding-top: 2rem;
   padding-bottom: 2rem;
