--- a/docroot/themes/custom/big_noise/scss/layout/_site--main--secondary-navigation.scss
+++ b/docroot/themes/custom/big_noise/scss/layout/_site--main--secondary-navigation.scss
@@ -42,12 +42,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        min-height: 4rem;
+        height: $bn-site-main-secondary-navigation-height-layout-mobile;
         @media (min-width: $bn-breakpoint-layout-tablet) {
-          min-height: 4.8rem;
+          height: $bn-site-main-secondary-navigation-height-layout-tablet;
         }
         @media (min-width: $bn-breakpoint-layout-desktop) {
-          min-height: 6.7rem;
+          height: $bn-site-main-secondary-navigation-height-layout-desktop
         }
       }
     }
