--- a/docroot/themes/custom/big_noise/scss/layout/_site--main.scss
+++ b/docroot/themes/custom/big_noise/scss/layout/_site--main.scss
@@ -1,3 +1,15 @@
-#site--main {
+.site--main--container {
+  min-height: 100vh;
   position: relative;
+
+  padding-top: $bn-header-height-layout-mobile;
+  padding-bottom: $bn-footer-height-layout-mobile;
+  @media (min-width: $bn-breakpoint-layout-tablet) {
+    padding-top: $bn-header-height-layout-tablet;
+    padding-bottom: $bn-footer-height-layout-tablet;
+  }
+  @media (min-width: $bn-breakpoint-layout-desktop) {
+    padding-top: $bn-header-height-layout-desktop;
+    padding-bottom: $bn-footer-height-layout-desktop;
+  }
 }
